# SkylonRemoteApp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.cross  LOGS.md  MOCK_MODE.md  PROGRAMME_ENTRAINEMENT.md  QUICK_START.md  README-deploy.md  README.md  SYSTEME_SHUTDOWN_REBOOT.md  SYSTEM_SHUTDOWN_REBOOT.md  build-on-pi.sh  checkpoint.sh  deploy-to-pi.sh  docker-build.sh  run-mock.sh  version.sh
.agent/plans/: restore_features.md
.cargo/: config.toml
autostart/: AUTOSTART_SETUP.md  GESTION_LOGS.md  MIGRATION_GUIDE.md  README_installation.md  cleanup-logs.sh  install-service.sh  journald-limit.conf  launch_terminal.sh  migrate-service.sh  setup-log-management.sh  setup-sudo-permissions.sh  skylon-remote.service  startup-command-minimal-logs.service  startup-command.service
src/: bike_controller.rs  main.rs  mock_bike_controller.rs  training_program.rs
static/: README_LEGACY.md  index-legacy.html  index.html  programs.html  test-legacy.html
