[package]
name = "elliptical_server"
version = "0.1.0"
edition = "2024"

[features]
default = ["real-bluetooth"]
real-bluetooth = ["kdri"]
mock = []

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dependencies.kdri]
git = "https://github.com/kaegi/kdri"
optional = true
